# bundle_test

./: README.md  docker-compose.implementations.yml  docker-compose.yml
benchmark-runner/: run_benchmark.py
docs/: rest_sequence.mmd  web_service_spec.md
implementations/: README.md
implementations/aspnet-core/: Dockerfile  Program.cs  aspnet-core.csproj
implementations/django-python/: Dockerfile  manage.py
implementations/django-python/gateway/: settings.py  urls.py
implementations/express-node/: Dockerfile  index.js  package.json
implementations/fastapi-python/: Dockerfile  main.py  requirements.txt
implementations/go-svc/: Dockerfile  go.mod  main.go
implementations/java-spring/: Application.java  Dockerfile  build.gradle
implementations/kotlin-spring/: Application.kt  Dockerfile  build.gradle.kts
implementations/laravel-php/: Dockerfile  index.php  routes_api.php
implementations/nest-ts/: Dockerfile  main.ts  package.json
implementations/phoenix-elixir/: Dockerfile  metrics_controller.ex  router.ex  server.exs
implementations/rails-ruby/: Dockerfile  app.rb  routes.rb
implementations/rust-axum/: Cargo.toml  Dockerfile
implementations/rust-axum/src/: main.rs
opcua-server/: Dockerfile  opcua_metrics_server.py  requirements.txt
postgres/init/: 01_schema.sql
